<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLoadingTV"
            type="java.lang.Boolean" />

        <variable
            name="isLoadingAll"
            type="java.lang.Boolean" />

        <variable
            name="isLoadingClothes"
            type="java.lang.Boolean" />

        <variable
            name="isLoadingElectronics"
            type="java.lang.Boolean" />

        <variable
            name="isLoadingFurniture"
            type="java.lang.Boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ecommerce"
                    app:layout_collapseMode="parallax" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <HorizontalScrollView
                android:id="@+id/categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingStart="@dimen/_2sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:scrollbars="none">

                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_2sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/_2sdp">

                    <LinearLayout
                        android:id="@+id/clothes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:background="@drawable/rounded_view"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_2sdp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgClothes"
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:layout_marginStart="@dimen/_4sdp"
                            android:src="@mipmap/clothes" />

                        <TextView
                            android:id="@+id/tvClothes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:maxLines="1"
                            android:paddingStart="@dimen/_9sdp"
                            android:paddingTop="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_9sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:text="@string/clothes"
                            android:textColor="@color/color1"
                            android:textSize="@dimen/_13ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/electronics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_2sdp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgElectronics"
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:layout_marginStart="@dimen/_4sdp"
                            android:src="@mipmap/electronics" />

                        <TextView
                            android:id="@+id/tvElectronics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:maxLines="1"
                            android:paddingStart="@dimen/_9sdp"
                            android:paddingTop="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_9sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:text="@string/electronics"
                            android:textColor="@color/color3"
                            android:textSize="@dimen/_13ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/furniture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"

                        android:orientation="horizontal"
                        android:padding="@dimen/_2sdp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgFurniture"
                            android:layout_width="@dimen/_24sdp"
                            android:layout_height="@dimen/_24sdp"
                            android:layout_marginStart="@dimen/_4sdp"
                            android:src="@mipmap/furniture" />

                        <TextView
                            android:id="@+id/tvFurniture"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="start"
                            android:maxLines="1"
                            android:paddingStart="@dimen/_9sdp"
                            android:paddingTop="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_9sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:text="@string/Furniture"
                            android:textColor="@color/color3"
                            android:textSize="@dimen/_12ssp" />
                    </LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:padding="@dimen/_4sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/item_product" />

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>